2011-05-06  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.h (fhandler_dev_dsp): Cosmetic change.

	* fhandler_tty.cc (fhandler_pty_master::process_slave_output): Put back
	Sleep(10) for tty_master case.

	* sigproc.cc (stopped_or_terminated): Don't consider a pid which has
	been reaped to be terminated.

2011-05-06  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* sysconf.cc (sysinfo): New function.
	* cygwin.din (sysinfo): Export.
	* posix.sgml (std-gnu): Add sysinfo.
	* include/sys/sysinfo.h (struct sysinfo): Define.
	(sysinfo): Declare.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2011-05-06  Corinna Vinschen  <corinna@vinschen.de>

	* libc/minires-os-if.c (get_dns_info): Drop printing uninitialized
	value of dwRetVal in debug output.

2011-05-06  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_socket::read): Declare.
	(fhandler_socket::write): Declare.
	* fhandler_procsys.cc (fhandler_procsys::read): Add FIXME comment.
	(fhandler_procsys::write): Ditto.
	* fhandler_socket.cc (fhandler_socket::read): New method.
	(fhandler_socket::write): New method.
	* syscalls.cc: Rearrange order of read/write functions.
	(read): Call fhandler read method directly instead of just readv.
	(readv): Remove EINTR loop.  This is done in all affected fhandler's
	now.
	(write): Call fhandler write method directly instead of just writev.
	Fix debug output.

2011-05-05  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* cygheap.cc (cygheap::close_ctty): Close ctty via close_with_arch().
	* debug.cc (close_handle): Call debugger on failure.
	* devices.in (device::tty_to_real_device): Delete.
	* devices.h (device::tty_to_real_device): Ditto.
	* devices.cc: Regenerate.
	* dtable.cc: Delete old ifdef'ed vfork code.
	(dtable::release): Don't handle archetype here.
	(dtable::init_std_file_from_handle): Consolidate console tests.
	Generate major/minor for tty ASAP.  Fix incorrect setting of DEV_TTYS*
	for serial.